--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"> -->
   <!-- CUSTOM STYLES -->
   <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <!-- Google Fonts -->
@@ -18,90 +20,75 @@
   <!-- JQUERY -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script> -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
   <!-- CUSTOM JS -->
-  <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
 
 </head>
 
 <body>
-  <!--  -->
-  <!-- Navbar -->
-  <!--  -->
-  <nav class="navbar">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"> Movie Troopers </a>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Movie Troopers</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="#" class="nowPlaying"> Discover </a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                aria-expanded="false">Genres<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#" class="action" id="action">Action</a></li>
-                <li><a href="#" class="adventure" id="adventure">Adventure</a></li>
-                <li><a href="#" class="animation" id="animation">Animation</a></li>
-                <li><a href="#" class="comedy" id="comedy">Comedy</a></li>
-                <li><a href="#" class="crime" id="crime">Crime</a></li>
-                <li><a href="#" class="drama" id="drama">Drama</a></li>
-                <li><a href="#" class="family" id="family">Family</a></li>
-                <li><a href="#" class="fantasy" id="fantasy">Fantasy</a></li>
-                <li><a href="#" class="history" id="history">History</a></li>
-                <li><a href="#" class="music" id="music">Music</a></li>
-                <li><a href="#" class="romance" id="romance">Romance</a></li>
-                <li><a href="#" class="scifi" id="scifi">Science Fiction</a></li>
-                <li><a href="#" class="thriller" id="thriller">Thriller</a></li>
-              </ul>
-            </li>
-            <li class="gitHubLogo">
-              <a href="https://github.com/dangconnie/movie-app" target="_blank">GitHub Repo</a>
-            </li>
-            <!-- <li><a href="#">Specials</a></li> -->
-            <!--      <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Extras <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">VIP Rewards Card</a></li>
-            <li><a href="#">Specials and Promotions</a></li>
-            <li><a href="#">Gift Cards</a></li>
-          </ul>
-        </li> -->
-            <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Locations<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Atlanta</a></li>
-            <li><a href="#">Buckhead</a></li>
-            <li><a href="#">Midtown</a></li>
-            <li><a href="#">Marietta</a></li>
-          </ul>
-        </li> -->
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <form class="navbar-form navbar-right searchForm">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search movies">
-              </div>
-              <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Discover <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Genre
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a href="#" class="dropdown-item action" id="action">Action</a>
+              <a href="#" class="dropdown-item adventure" id="adventure">Adventure</a>
+              <a href="#" class="dropdown-item animation" id="animation">Animation</a>
+              <a href="#" class="dropdown-item comedy" id="comedy">Comedy</a>
+              <a href="#" class="dropdown-item crime" id="crime">Crime</a>
+              <a href="#" class="dropdown-item drama" id="drama">Drama</a>
+              <a href="#" class="dropdown-item family" id="family">Family</a>
+              <a href="#" class="dropdown-item fantasy" id="fantasy">Fantasy</a>
+              <a href="#" class="dropdown-item history" id="history">History</a>
+              <a href="#" class="dropdown-item music" id="music">Music</a>
+              <a href="#" class="dropdown-item romance" id="romance">Romance</a>
+              <a href="#" class="dropdown-item scifi" id="scifi">Science Fiction</a>
+              <a href="#" class="dropdown-item thriller" id="thriller">Thriller</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0 searchForm">
+          <div class="form-group">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search Movie" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </div>
+        </form>
+      </div>
     </div>
   </nav>
 
+  <div class="container mt-5 pt-3">
+    <div class="genreLabel">
+      <h1 id="movieGenreLabel"></h1>
+      <div id="movie-list"></div>
+    </div>
+    <!-- </div> -->
+  </div>
+  </div>
 
   <!-- Displaying the movies -->
   <div class="container">
@@ -109,6 +96,7 @@
       <div class="genreLabel">
         <h1 id="movieGenreLabel"></h1>
       </div>
+      <br>
       <!-- I need the h1 to change accordingly depending on what was clicked. -->
       <div id="movie-grid">
         <!-- Jquery get us the movie posters! Need a place to put the poster images -->
