--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!-- JQUERY -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
@@ -84,10 +85,10 @@
   <div class="container mt-5 pt-3">
     <div class="genreLabel">
       <h1 id="movieGenreLabel"></h1>
+      <div class="poster" id="poster"></div>
       <div id="movie-list"></div>
+      <div id="movie-details"></div>
     </div>
-    <!-- </div> -->
-  </div>
   </div>
 
   <!-- Displaying the movies -->
