--- a/index.html
+++ b/index.html
@@ -1,98 +1,143 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Movie App</title>
 
-<head>
-
-  <title>Movie App</title>
-
-
-  <!-- Latest compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <!-- Optional theme -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"> -->
-  <!-- CUSTOM STYLES -->
-  <link rel="stylesheet" type="text/css" href="/src/css/styles.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <!-- JQUERY -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <!-- Latest compiled and minified JavaScript -->
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		<!-- Latest compiled and minified CSS -->
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+			crossorigin="anonymous"
+		/>
+		<!-- Optional theme -->
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"> -->
+		<!-- CUSTOM STYLES -->
+		<link rel="stylesheet" type="text/css" href="/src/css/styles.css" />
+		<!-- Google Fonts -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+			integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+			crossorigin="anonymous"
+		/>
+		<!-- JQUERY -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<!-- Latest compiled and minified JavaScript -->
+		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+		<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
   </script> -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script>
-  <!-- CUSTOM JS -->
-  <script type="text/javascript" src="/src/js/scripts.js"></script>
-  <script type="text/javascript" src="/src/js/poster-image.js"></script>
+		<script
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+			crossorigin="anonymous"
+		></script>
+		<!-- CUSTOM JS -->
+		<script type="text/javascript" src="/src/js/index.js"></script>
+		<script type="text/javascript" src="/src/js/poster-image.js"></script>
+	</head>
 
-</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+			<div class="container">
+				<a class="navbar-brand" href="#">Movie Troopers</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-toggle="collapse"
+					data-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Movie Troopers</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#"
+								>Discover <span class="sr-only">(current)</span></a
+							>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								id="navbarDropdown"
+								role="button"
+								data-toggle="dropdown"
+								aria-haspopup="true"
+								aria-expanded="false"
+							>
+								Genre
+							</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a href="#" class="dropdown-item action" id="action">Action</a>
+								<a href="#" class="dropdown-item adventure" id="adventure"
+									>Adventure</a
+								>
+								<a href="#" class="dropdown-item animation" id="animation"
+									>Animation</a
+								>
+								<a href="#" class="dropdown-item comedy" id="comedy">Comedy</a>
+								<a href="#" class="dropdown-item crime" id="crime">Crime</a>
+								<a href="#" class="dropdown-item drama" id="drama">Drama</a>
+								<a href="#" class="dropdown-item family" id="family">Family</a>
+								<a href="#" class="dropdown-item fantasy" id="fantasy"
+									>Fantasy</a
+								>
+								<a href="#" class="dropdown-item history" id="history"
+									>History</a
+								>
+								<a href="#" class="dropdown-item music" id="music">Music</a>
+								<a href="#" class="dropdown-item romance" id="romance"
+									>Romance</a
+								>
+								<a href="#" class="dropdown-item scifi" id="scifi"
+									>Science Fiction</a
+								>
+								<a href="#" class="dropdown-item thriller" id="thriller"
+									>Thriller</a
+								>
+							</div>
+						</li>
+					</ul>
+					<form class="form-inline my-2 my-lg-0 searchForm">
+						<div class="form-group">
+							<input
+								class="form-control mr-sm-2"
+								type="search"
+								placeholder="Search Movie"
+								aria-label="Search"
+							/>
+							<button
+								class="btn btn-outline-success my-2 my-sm-0"
+								type="submit"
+							>
+								Search
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</nav>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Discover <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Genre
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a href="#" class="dropdown-item action" id="action">Action</a>
-              <a href="#" class="dropdown-item adventure" id="adventure">Adventure</a>
-              <a href="#" class="dropdown-item animation" id="animation">Animation</a>
-              <a href="#" class="dropdown-item comedy" id="comedy">Comedy</a>
-              <a href="#" class="dropdown-item crime" id="crime">Crime</a>
-              <a href="#" class="dropdown-item drama" id="drama">Drama</a>
-              <a href="#" class="dropdown-item family" id="family">Family</a>
-              <a href="#" class="dropdown-item fantasy" id="fantasy">Fantasy</a>
-              <a href="#" class="dropdown-item history" id="history">History</a>
-              <a href="#" class="dropdown-item music" id="music">Music</a>
-              <a href="#" class="dropdown-item romance" id="romance">Romance</a>
-              <a href="#" class="dropdown-item scifi" id="scifi">Science Fiction</a>
-              <a href="#" class="dropdown-item thriller" id="thriller">Thriller</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0 searchForm">
-          <div class="form-group">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search Movie" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container mt-5 pt-3">
-    <div class="genreLabel">
-      <h1 id="movieGenreLabel"></h1>
-      <div class="poster" id="poster"></div>
-      <div id="movie-list">
-
-      </div>
-    </div>
-  </div>
-
-</body>
-
+		<div class="container mt-5 pt-3">
+			<div class="genreLabel">
+				<h1 id="movieGenreLabel"></h1>
+				<div class="poster" id="poster"></div>
+				<div id="movie-list"></div>
+			</div>
+		</div>
+	</body>
 </html>
