--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<script src="/node_modules/@popperjs/core/dist/esm/popper.js"></script>
 		<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- CUSTOM JS -->
-		<script type="text/javascript" src="/src/js/index.js"></script>
-		<script type="text/javascript" src="/src/js/poster-image.js"></script>
+		<script type="text/javascript" src="/dist/main.js"></script>
+		<script type="text/javascript" src="/src/poster-image.js"></script>
 	</head>
 
 	<body>
