checkpoint-before add hovercss

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 			rel="stylesheet"
 			href="/node_modules/font-awesome/css/font-awesome.min.css"
 		/> -->
+	<script src="http://ianlunn.github.io/Hover/css/hover.css"></script>
 	<script type="text/javascript" src="/dist/index.js"></script>
 
 	<!-- <script src="/node_modules/jquery/dist/jquery.min.js"></script>
