--- a/src/index.html
+++ b/src/index.html
@@ -1,140 +1,61 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Movie App</title>
+<html lang="en">
 
-		<!-- <link
-			rel="stylesheet"
-			href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
-		/>
+<head>
+  <meta charset="utf-8" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Movie Troopers</title>
+</head>
 
-		<link rel="stylesheet" type="text/css" href="/src/css/styles.css" />
+<body>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Movie Troopers</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-		<link
-			rel="stylesheet"
-			href="/node_modules/font-awesome/css/font-awesome.min.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="http://ianlunn.github.io/Hover/css/hover.css"
-		/>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <div class="nav-item">
+              <a class="nav-link" href="#" data-category="trending" id="trending">
+                Discover
+              </a>
+            </div>
+            <li class="nav-item">
+              <a class="nav-link" href="#" data-category="trending" id="trending">
+                Trending
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" data-category="now_playing" id="now_playing">
+                Now Playing
+              </a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0 searchForm">
+            <div class="form-group">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search Movie" aria-label="Search" />
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                Search
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <carousel-slide></carousel-slide>
+  <adv-wrapper></adv-wrapper>
+  <div class="container mt-5">
+    <div class="genreLabel pb-3">
+      <h4 id="movieGenreLabel"> Discover </h4>
+    </div>
+  </div>
+  <poster-image> </poster-image>
+</body>
 
-		<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="/node_modules/@popperjs/core/dist/esm/popper.js"></script>
-		<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
-
-		<!-- CUSTOM JS -->
-		<script type="text/javascript" src="/src/js/index.js"></script>
-	</head>
-
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="#">Movie Troopers</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="#"
-								data-category="trending"
-								id="trending"
-							>
-								Trending
-							</a>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link"
-								href="#"
-								data-category="now_playing"
-								id="now_playing"
-							>
-								Now Playing
-							</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a
-								class="nav-link dropdown-toggle"
-								href="#"
-								id="navbarDropdown"
-								role="button"
-								data-toggle="dropdown"
-								aria-haspopup="true"
-								aria-expanded="false"
-							>
-								Genre
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a href="#" class="dropdown-item action" id="action">Action</a>
-								<a href="#" class="dropdown-item adventure" id="adventure"
-									>Adventure</a
-								>
-								<a href="#" class="dropdown-item animation" id="animation"
-									>Animation</a
-								>
-								<a href="#" class="dropdown-item comedy" id="comedy">Comedy</a>
-								<a href="#" class="dropdown-item crime" id="crime">Crime</a>
-								<a href="#" class="dropdown-item drama" id="drama">Drama</a>
-								<a href="#" class="dropdown-item family" id="family">Family</a>
-								<a href="#" class="dropdown-item fantasy" id="fantasy"
-									>Fantasy</a
-								>
-								<a href="#" class="dropdown-item history" id="history"
-									>History</a
-								>
-								<a href="#" class="dropdown-item music" id="music">Music</a>
-								<a href="#" class="dropdown-item romance" id="romance"
-									>Romance</a
-								>
-								<a href="#" class="dropdown-item scifi" id="scifi"
-									>Science Fiction</a
-								>
-								<a href="#" class="dropdown-item thriller" id="thriller"
-									>Thriller</a
-								>
-							</div>
-						</li>
-					</ul>
-					<form class="form-inline my-2 my-lg-0 searchForm">
-						<div class="form-group">
-							<input
-								class="form-control mr-sm-2"
-								type="search"
-								placeholder="Search Movie"
-								aria-label="Search"
-							/>
-							<button
-								class="btn btn-outline-success my-2 my-sm-0"
-								type="submit"
-							>
-								Search
-							</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</nav>
-
-		<div class="container mt-5 pt-3">
-			<div class="genreLabel">
-				<h1 id="movieGenreLabel">Trending</h1>
-			</div>
-			<div class="poster" id="poster">
-				<div id="movie-list"></div>
-			</div>
-		</div>
-	</body>
 </html>
